added classifier options details to audit message